# which

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  configure.bat
cmake/: BuildStats.cmake  NoInSourceBuilds.cmake
src/: aliases.cpp  internal_cmds.cpp  main.cpp  progargs.cpp  which.cpp
src/include/: aliases.h  internal_cmds.h  progargs.h  which.h  which_version.h.in
tests/: CMakeLists.txt  test_internals.cpp
